<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menuAdd"
        android:icon="@drawable/add"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menuAdd">
    </item>
    <item
        android:id="@+id/menuDelete"
        android:icon="@drawable/delete"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menuDelete">
    </item>
    <item
        android:id="@+id/menuEdit"
        android:icon="@drawable/edit"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menuEdit">
    </item>
    <item
        android:id="@+id/menuNotification"
        android:icon="@drawable/edit"
        android:showAsAction="never"
        android:title="@string/menuNotification">
    </item>
    <item
        android:id="@+id/menuExit"
        android:showAsAction="never"
        android:title="@string/menuExit">
    </item>

</menu>